[tool.poetry]
name = "dash-app"
version = "0.1.0"
description = ""
authors = ["Author <raoshun>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.20.0"
dash-core-components = "^1.16.0"
dash-html-components = "^1.1.3"
dash-renderer = "^1.9.1"
plotly = "^4.14.3"
werkzeug = "<2.0"
markupsafe = "<2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
